--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="A romantic Valentine's Day proposal" />
-    <title>Will You Be My Valentine? 💕</title>
+    <link rel="icon" type="image/x-icon" href="/public/heart.ico" sizes="32x32">
+    <title>Proposal Day | Babe 💕</title>
   </head>
   <body>
     <div id="root"></div>
