--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="A romantic Valentine's Day proposal" />
-    <link rel="icon" type="image/x-icon" href="/public/heart.ico" sizes="32x32">
+    <link rel="icon" type="image/x-icon" href="/heart.ico" sizes="32x32">
     <script defer src="https://cloud.umami.is/script.js" data-website-id="806e7fa2-7282-4c7a-ac32-fe28f53f5f65"></script>
-    <title>Proposal Day | Babe 💕</title>
+    <title>Valentine's Week | Babe 💕</title>
   </head>
   <body>
     <div id="root"></div>
